<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.inovus.ms.rdm</groupId>
    <artifactId>rdm</artifactId>
    <version>1.10-SNAPSHOT</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>net.n2oapp.platform</groupId>
        <artifactId>n2o-platform-parent</artifactId>
        <version>1.6.1-SNAPSHOT</version>
        <relativePath />
    </parent>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <encoding>UTF-8</encoding>
        <liquibase.version>3.6.3-SNAPSHOT</liquibase.version>
        <apache.poi.version>3.17</apache.poi.version>
        <filestorage.version>2.0-SNAPSHOT</filestorage.version>
        <vds.version>2.1-SNAPSHOT</vds.version>
        <n2o.version>7.0.6</n2o.version>
        <selenium.version>3.8.1</selenium.version>
        <itext.version>5.5.9</itext.version>
        <xmlunit.version>1.6</xmlunit.version>
        <security.admin.version>3.0-SNAPSHOT</security.admin.version>
        <internal.repository.releases>https://maven.i-novus.ru/libs-release-local</internal.repository.releases>
        <internal.repository.shapshots>https://maven.i-novus.ru/libs-snapshot-local</internal.repository.shapshots>
        <internal.repository.id>i-novus-central</internal.repository.id>
    </properties>

    <scm>
        <connection>scm:git:https://git.i-novus.ru/microservices/rdm.git</connection>
        <url>https://git.i-novus.ru/microservices/rdm</url>
        <developerConnection>scm:git:https://git.i-novus.ru/microservices/rdm.git</developerConnection>
        <tag>HEAD</tag>
    </scm>


    <modules>
        <module>rdm-api</module>
        <module>rdm-rest</module>
        <module>rdm-impl</module>
        <module>rdm-n2o</module>
        <module>rdm-fnsi-impl</module>
        <module>rdm-fnsi-n2o</module>
        <module>rdm-sync-spring-boot-starter</module>
    </modules>

    <distributionManagement>
        <repository>
            <id>${internal.repository.id}</id>
            <name>${internal.repository.id}</name>
            <url>${internal.repository.releases}</url>
        </repository>
        <snapshotRepository>
            <id>${internal.repository.id}</id>
            <name>${internal.repository.id}</name>
            <url>${internal.repository.shapshots}</url>
            <uniqueVersion>true</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>ru.inovus.ms.rdm</groupId>
                <artifactId>rdm-api</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>ru.inovus.ms.rdm</groupId>
                <artifactId>rdm-impl</artifactId>
                <version>${project.version}</version>
                <scope>runtime</scope>
            </dependency>

            <dependency>
                <groupId>ru.inovus.ms.rdm</groupId>
                <artifactId>rdm-fnsi-impl</artifactId>
                <version>${project.version}</version>
                <scope>runtime</scope>
            </dependency>

            <dependency>
                <groupId>ru.inovus.ms.rdm</groupId>
                <artifactId>rdm-fnsi-n2o</artifactId>
                <version>${project.version}</version>
                <scope>runtime</scope>
            </dependency>

            <dependency>
                <groupId>ru.i-novus.platform</groupId>
                <artifactId>versioned-data-storage-api</artifactId>
                <version>${vds.version}</version>
            </dependency>


            <dependency>
                <groupId>ru.i-novus.platform</groupId>
                <artifactId>versioned-data-storage-spring-adapter</artifactId>
                <version>${vds.version}</version>
            </dependency>

            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>5.2.12.Final</version>
            </dependency>

            <dependency>
                <groupId>com.opentable.components</groupId>
                <artifactId>otj-pg-embedded</artifactId>
                <version>0.12.6</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi</artifactId>
                <version>${apache.poi.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>${apache.poi.version}</version>
            </dependency>

            <dependency>
                <groupId>ru.i-novus.common</groupId>
                <artifactId>fs-file-storage</artifactId>
                <version>${filestorage.version}</version>
            </dependency>

            <dependency>
                <groupId>com.monitorjbl</groupId>
                <artifactId>xlsx-streamer</artifactId>
                <version>1.2.0</version>
            </dependency>

            <dependency>
                <groupId>net.n2oapp.framework</groupId>
                <artifactId>n2o-spring-boot-starter</artifactId>
                <version>${n2o.version}</version>
            </dependency>

            <dependency>
                <groupId>net.n2oapp.framework</groupId>
                <artifactId>n2o-web</artifactId>
                <version>${n2o.version}</version>
            </dependency>

            <dependency>
                <groupId>net.n2oapp.framework</groupId>
                <artifactId>n2o-header</artifactId>
                <version>${n2o.version}</version>
            </dependency>

            <dependency>
                <groupId>com.itextpdf</groupId>
                <artifactId>itextpdf</artifactId>
                <version>${itext.version}</version>
            </dependency>

            <dependency>
                <groupId>com.itextpdf.tool</groupId>
                <artifactId>xmlworker</artifactId>
                <version>${itext.version}</version>
            </dependency>

            <dependency>
                <groupId>xmlunit</groupId>
                <artifactId>xmlunit</artifactId>
                <version>${xmlunit.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>net.n2oapp.framework.security</groupId>
                <artifactId>security-admin-rest-client</artifactId>
                <version>${security.admin.version}</version>
            </dependency>

            <dependency>
                <groupId>net.n2oapp.framework.security</groupId>
                <artifactId>security-auth-oauth2</artifactId>
                <version>${security.admin.version}</version>
            </dependency>

            <dependency>
                <groupId>net.n2oapp.framework.security</groupId>
                <artifactId>security-auth-simple</artifactId>
                <version>${security.admin.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-consul-dependencies</artifactId>
                <version>1.3.0.RELEASE</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>



        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>javax.interceptor</groupId>
            <artifactId>javax.interceptor-api</artifactId>
            <version>1.2</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <useSystemClassLoader>false</useSystemClassLoader>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>